# OtusPythonBasic

./: README.md
homework_01/: main.py
homework_02/: base.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
