[tool.poetry]
name = "homework_03"
version = "0.1.0"
description = "FastAPI homework app"
authors = ["Vladimir Batov <atervita@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry_core>=1.1.2"]
build-backend = "poetry.core.masonry.api"
